# fmod-csv-batch-importer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_import.bat  template.csv
.sisyphus/: boulder.json
.sisyphus/drafts/: fmod-merged-plan.md
.sisyphus/evidence/: sample_batch_20260304_163410_log.md  task-1-layout.txt  task-1-pytest-collect.txt  task-15-stepwise.txt  task-2-csv-invalid.txt  task-2-csv-valid.txt  task-4-event-path.txt  task-4-invalid-prefix.txt  task-5-gui.txt  task-5-log-path.txt  task-5-log-summary.txt  task-7-discovery.json
.sisyphus/notepads/fmod-batch-import/: learnings.md
.sisyphus/notepads/fmod-batch-import-merged/: learnings.md
.sisyphus/plans/: fmod-batch-import-merged.md
debug/: __init__.py  discover_fmod_model.py  verify_fmod_tcp.py
fmod_batch_import/: __init__.py  __main__.py  audio_import.py  audio_resolver.py  bus_bank_manager.py  csv_parser.py  fmod_client.py  gui.py  js_builder.py  log_writer.py  metadata_verifier.py  orchestrator.py  path_normalizer.py  template_inspector.py
plans/: fmod-audio-resolution-matching.md  fmod-batch-import-bugfix.md  fmod-batch-import-voiceover.md  fmod-import-main-flow-fix.md  fmod-scripting-probe.md
tests/: test_audio_resolver.py  test_csv_parser.py  test_fmod_client.py  test_log_writer.py  test_orchestrator.py  test_path_normalization.py
